# advanced/backend/views/home/homepage-items/view.php
@@ -1,0 +1,77 @@
+<?php
+
+use yii\helpers\Url;
+use yii\helpers\Html;
+use yii\widgets\DetailView;
+
+/* @var $this yii\web\View */
+/* @var $model common\models\homepage\HomepageItems */
+
+$this->title = $model->id;
+$this->params['small'] = 'View';
+$this->params['breadcrumbs'][] = ['label' => '主页扩展', 'url' => ['index']];
+$this->params['breadcrumbs'][] = $this->title;
+?>
+<div id="app">
+    <lte-row>
+        <lte-col col="3">
+            <lte-box title="选项" icon="fa fa-edit">
+                <?= Html::tag("lte-btn","<i class='glyphicon glyphicon-list'></i> 列表",[
+                    "href"=>Url::to(["index"]),
+                    "a"=>true,
+                    "block"=>true,
+                ])?>
+                <?= Html::tag("lte-btn","<i class='glyphicon glyphicon-plus'></i> 添加",[
+                    "href"=>Url::to(["create"]),
+                    "a"=>true,
+                    "block"=>true,
+                    "type"=>"info"
+                ])?>
+                <?= Html::tag("lte-btn","<i class='glyphicon glyphicon-edit'></i> 修改",[
+                    "href"=>Url::to(["update", 'id' => $model->id]),
+                    "a"=>true,
+                    "block"=>true,
+                    "type"=>"success"
+                ])?>
+                <?= Html::tag("lte-btn","<i class='glyphicon glyphicon-remove'></i> 删除",[
+                    "href"=>Url::to(["delete", 'id' => $model->id]),
+                    "a"=>true,
+                    "block"=>true,
+                    "type"=>"danger",
+                    'data' => [
+                    'confirm' => Yii::t('yii', 'Are you sure you want to delete this item?'),
+                    'method' => 'post',
+                ]
+                ])?>
+                <?= Html::tag("lte-btn","<i class='glyphicon glyphicon-share-alt'></i> 返回",[
+                    "href"=>"javascript:history.go(-1)",
+                    "a"=>true,
+                    "block"=>true,
+                    "type"=>"warning"
+                ])?>
+            </lte-box>
+        </lte-col>
+        <lte-col col="9">
+            <lte-box title="详情" icon="fa fa-eye">
+
+                <?= DetailView::widget([
+                    'model' => $model,
+                    'attributes' => [
+                        'id',
+                        'order',
+                        'image',
+                        'content:ntext',
+                    ],
+                ]) ?>
+
+            </lte-box>
+        </lte-col>
+    </lte-row>
+</div>
+
+<script>
+    new Vue({
+        el:'#app',
+        data:{}
+    })
+</script>
